# cs393r_starter

./: .gitignore  CMakeLists.txt  WFD.py  __init__.py  nav_interface_node.py  test__WFD.py
config/: navigation.lua  navigation_sim.lua  particle_filter.lua
src/: eigen_tutorial.cc
src/exploration/: maze_map_with_WFD__final.pgm  maze_map_with_WFD__final.yaml  metrics.py  package.xml  setup.py
src/exploration/exploration/: WFD.py  exploration_node.py  test__WFD.py
src/navigation/: GDC1_path.csv  GDC1_walls.csv  GDC3_walls.csv  ackermann_motion_primitives.cc  ackermann_motion_primitives.h  constant_curvature_arc.cc  constant_curvature_arc.h  grid.hpp  high_level_nav_plan.cc  high_level_nav_plan_main.cc  jps.cpp  jps.hpp  motion_primitives.cc  motion_primitives.h  navigation.cc  navigation.h  navigation_main.cc  navigation_params.h  navigation_test.cc  save_static_map.py
src/particle_filter/: hparam.yaml  particle_filter.cc  particle_filter.cu  particle_filter.cuh  particle_filter.h  particle_filter_main.cc
src/shared/math/: geometry.h
src/turtle_nav/: package.xml  setup.py
src/visualization/: visualization.cc  visualization.h
